# Tape-sorter

./: CMakeLists.txt  README.md  config.json
.github/workflows/: cmake.yml
src/: Main.cpp
src/config/: config.cpp  config.h
src/sort/: sorter.cpp  sorter.h
src/tape/: file_tape.cpp  file_tape.h  tape.h
tests/: tape_tests.cpp
